--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -56,13 +56,13 @@ workflows:
           device: iPhone XS
           cache-prefix: ios-dependencies
   ui_tests:
-    triggers:
-      - schedule:
-          cron: "0 0 * * *"
-          filters:
-            branches:
-              only:
-                - develop
+    # triggers:
+    #   - schedule:
+    #       cron: "0 0 * * *"
+    #       filters:
+    #         branches:
+    #           only:
+    #             - develop
     jobs:
       - build-ui-tests:
           name: Build UI Tests
