--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -48,16 +48,16 @@ jobs:
           name: Store .xcresult bundle
           path: DerivedData/Logs/Test/*.xcresult
           destination: test-results
-      - run:
-          name: Prepare Slack message
-          when: always
-          command: |
-            # Get the name of the device that is running. Using "<< parameters.device >>" can cause slack formatting errors.
-            DEVICE_NAME=$(xcrun simctl list -j | jq -r --arg UDID $SIMULATOR_UDID '.devices[] | .[] | select(.udid == "\($UDID)") | .name')
-            echo "export SLACK_FAILURE_MESSAGE=':red_circle: WordPress iOS UI tests have failed on ${DEVICE_NAME}!'" >> $BASH_ENV
-      - slack/status:
-          fail_only: 'true'
-          failure_message: '${SLACK_FAILURE_MESSAGE}'
+      # - run:
+      #     name: Prepare Slack message
+      #     when: always
+      #     command: |
+      #       # Get the name of the device that is running. Using "<< parameters.device >>" can cause slack formatting errors.
+      #       DEVICE_NAME=$(xcrun simctl list -j | jq -r --arg UDID $SIMULATOR_UDID '.devices[] | .[] | select(.udid == "\($UDID)") | .name')
+      #       echo "export SLACK_FAILURE_MESSAGE=':red_circle: WordPress iOS UI tests have failed on ${DEVICE_NAME}!'" >> $BASH_ENV
+      # - slack/status:
+      #     fail_only: 'true'
+      #     failure_message: '${SLACK_FAILURE_MESSAGE}'
 
 workflows:
   wordpress_ios:
